# poco-remote-procedure-call-rpc--framework

./: .gitignore.txt  CMakeLists.txt  README.md  vcpkg.json
include/: rpc_protocol.h
src/: client.cpp  rpc_client_lib.h  rpc_methods.h  rpc_protocol.h  serialization.cpp  serialization.h  server.cpp  test_serialization.cpp
